<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:autofillHints="name"
        android:inputType="text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_register"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>

    <EditText
        android:id="@+id/et_konfirmasi_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/konfirmasi_password"
        android:autofillHints="password"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_konfirmasi_password"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_tv"
        app:srcCompat="@drawable/ic_movie" />

    <LinearLayout
        android:id="@+id/linear_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/movie"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/app"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>