...
        android:paddingEnd="18dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_username"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_button"
...
